--- a/style.css
+++ b/style.css
@@ -25,3 +25,28 @@ header {
 .post-publication-date {
   color: gray;
 }
+
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+#contact-form {
+  margin-top: 10px;
+}
+
+#signup-form {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.post-body {
+  text-align: justify;
+}
+
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
