--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  width: 40em;
+  width: 350px;
   margin: auto;
 }
 
@@ -24,4 +24,10 @@ header {
 
 .post-publication-date {
   color: gray;
+}
+
+@media only screen and (max-width: 400px) {
+  body {
+    max-width: 98%;
+  }
 }
